<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/android"
    android:scaleType="fitXY"
    tools:context="com.example.reimon.test_v1.MainActivity"
    android:onClick="inicioTest">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/titulo"
        android:textColor="#9933CC"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:onClick="inicioTest"
        android:text="@string/cuadro_texto1"
        android:textColor="#0099CC"
        android:textStyle="italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="abrirNavegador"
        android:text="@string/cuadro_texto2"
        android:textColor="#0099CC"
        android:textStyle="italic"
        android:typeface="serif" />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="abrirEstadisticas"
        android:text="@string/cuadro_texto3"
        android:textColor="#0099CC"
        android:textStyle="italic"
        android:typeface="serif"
        />

</LinearLayout>