<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.reimon.test_v1.MostrarEstadistica">

    <TextView android:text="@string/Tit_estadistica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/Tit_estadistica"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:text="@string/Num_estadistica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/Num_estadistica"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/Tit_estadistica"
        android:layout_alignLeft="@+id/Tit_estadistica"
        android:layout_alignStart="@+id/Tit_estadistica" />

    <TextView
        android:text="Aciertos:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/N_aciertos"
        android:layout_toLeftOf="@+id/Num_aciertos"
        android:layout_alignBottom="@+id/Num_aciertos"
        android:layout_marginRight="15dp"
        />
    <TextView
        android:text="num_aciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/Num_aciertos"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Fallos:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/N_fallos"
        android:layout_toLeftOf="@+id/Num_fallos"
        android:layout_alignBottom="@+id/Num_fallos"
        android:layout_marginRight="15dp"
        />



    <TextView
        android:text="num_fallos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/Num_fallos"
        android:layout_below="@+id/Num_aciertos"
        android:layout_alignLeft="@+id/Num_aciertos"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_volver_estaditica"
        android:text="@string/button_volver_estadistica"
        android:layout_alignTop="@+id/button_borrar_estadistica"
        android:layout_toRightOf="@+id/Tit_estadistica"
        android:layout_toEndOf="@+id/Tit_estadistica"
        android:onClick="volverAndroidQuiz"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_borrar_estadistica"
        android:text="@string/button_borrar_estadistica"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/Tit_estadistica"
        android:layout_toStartOf="@+id/Tit_estadistica" />
</RelativeLayout>
